# crisalid-ikg

./: .dockerignore  .env.example  .gitignore  .pylintrc  CLAUDE.md  Dockerfile  README.md  docker-compose.yml.dist  loop-restart.sh  publication_sources_policies.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: cd_push_dev_main.yaml  cd_release.yaml  ci_pull_request.yml
app/: cli.py  crisalid_ikg.py  main.py  signals.py
app/amqp/: abstract_amqp_message_factory.py  amqp_document_created_event_message_factory.py  amqp_document_deleted_event_message_factory.py  amqp_document_event_message_factory.py  amqp_document_unchanged_event_message_factory.py  amqp_document_updated_event_message_factory.py  amqp_harvesting_events_message_processor.py  amqp_harvesting_result_event_message_factory.py  amqp_harvesting_state_event_message_factory.py  amqp_interface.py  amqp_message_processor.py  amqp_message_processor_factory.py  amqp_message_publisher.py  amqp_people_message_processor.py  amqp_person_created_event_message_factory.py  amqp_person_deleted_event_message_factory.py  amqp_person_event_message_factory.py  amqp_person_unchanged_event_message_factory.py  amqp_person_updated_event_message_factory.py  amqp_publication_message_processor.py  amqp_publication_retrieval_message_factory.py  amqp_reference_message_processor.py  amqp_research_structure_created_event_message_factory.py  (+16 more)
app/commands/: __init__.py  (+6 more)
scripts/: contribution_role_enum.py  contributors_roles_to_enum.py  relators.json
tests/: conftest.py  publication_sources_policies.yaml
(+588 files in other folders)
